blue-green-app.yaml
# green-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
        - name: green-app
          image: hashicorp/http-echo
          args: ["-listen=:8081", "-text=I am green"]
          ports:
            - containerPort: 8081

---

# green-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-app-service
spec:
  selector:
    app: green-app
  ports:
    - protocol: TCP
      port: 8081
---
kind: Ingress
metadata:
  name: canary-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"        
    nginx.ingress.kubernetes.io/canary-weight: "25"   
    kubernetes.io/elb.port: '80'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-app-service
                port:
                  number: 8081

---
# blue-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
        - name: blue-app
          image: hashicorp/http-echo
          args: ["-listen=:8080", "-text=I am blue"]
          ports:
            - containerPort: 8080

---

# blue-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-app-service
spec:
  selector:
    app: blue-app
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gray-release
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/elb.port: '80'
spec:
  ingressClassName: nginx   # Use this field instead of "kubernetes.io/ingress.class"
  rules:
    - http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: blue-app-service
                port:
                  number: 8080
